package com.example.h12g07practicafinal;

public class EstadoCelda {
    private int pocimaazul;
    private int pocimaverde;

}
